--- a/programs/token-biu/Cargo.toml
+++ b/programs/token-biu/Cargo.toml
@@ -19,5 +19,6 @@ idl-build = ["anchor-lang/idl-build",  "anchor-spl/idl-build"]
 [dependencies]
 anchor-lang = {version = "0.30.1",  features = ["init-if-needed"]}
 anchor-spl =  "0.30.1"
+anchor-lang-idl = { version = "0.1.1", features = ["convert"] }
 pyth-solana-receiver-sdk = "0.4.0"
 bs58 = "0.5.0"
