--- a/Anchor.toml
+++ b/Anchor.toml
@@ -5,10 +5,10 @@ resolution = true
 skip-lint = false
 
 [programs.localnet]
-token_biu = "EhQeU5ovyKfsT7mArWerJxLj9K2wmrC5PPKFDhTwuqqg"
+token_biu = "AZXoATbZhDjvRCDfWJxx1SGrmkYqvVbprjbFuF2NJ2DW"
 
 [programs.devnet]
-token_biu = "EhQeU5ovyKfsT7mArWerJxLj9K2wmrC5PPKFDhTwuqqg"
+token_biu = "AZXoATbZhDjvRCDfWJxx1SGrmkYqvVbprjbFuF2NJ2DW"
 
 [programs.mainnet]
 token_biu = "EhQeU5ovyKfsT7mArWerJxLj9K2wmrC5PPKFDhTwuqqg"
@@ -17,7 +17,7 @@ token_biu = "EhQeU5ovyKfsT7mArWerJxLj9K2wmrC5PPKFDhTwuqqg"
 url = "https://api.mainnet-beta.solana.com"
 
 [provider]
-cluster = "Localnet"
+cluster = "Devnet"
 wallet = "new-keypair.json"
 
 [test]
